add fourth lab